src/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: registry
  name: registry
  namespace: registry
spec:
  ports:
  - port: 5000 
    name: http 
    targetPort: 5000 
  selector:
    app: registry
status:
  loadBalancer: {}
