src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" 
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - registry.vps-hosting.es
    secretName: registry-ssl 
  rules:
  - host: registry.vps-hosting.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry 
            port:
              number: 5000
